# firecrawl_tool

./: pyproject.toml
firecrawl_scrape_or_extract_tool/: run.py  schemas.py
firecrawl_scrape_or_extract_tool/configs/: deployment.json
firecrawl_tool/: run.py
